--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.image }}"
+          imagePullPolicy: {{ .Values.deployment.image.pullPolicy }}
           resources:
             {{- toYaml .Values.deployment.resources | nindent 12 }}
           ports:
