--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -14,6 +14,8 @@ test:
     custom:
       - command: npm run test
         timeoutSeconds: 1200
+deploy:
+  helm: {}
 verify:
   - name: alpine-wget
     container:
@@ -21,8 +23,6 @@ verify:
       image: alpine:3.15.4
       command: ["/bin/sh"]
       args: ["-c", "wget http://www.google.com"]
-deploy:
-  helm: {}
 profiles:
   - name: development
     activation:
@@ -47,8 +47,7 @@ profiles:
           valuesFiles:
             - "helm/values.yaml"
           setValueTemplates:
-            image.repository: "{{.IMAGE_REPO_server}}"
-            image.tag: "{{.IMAGE_TAG_server}}"
+            image: "{{.IMAGE_FULLY_QUALIFIED_server}}"
   - name: production
     manifests:
       helm:
@@ -62,5 +61,4 @@ profiles:
           valuesFiles:
             - "helm/values.yaml"
           setValueTemplates:
-            image.repository: "{{.IMAGE_REPO_server}}"
-            image.tag: "{{.IMAGE_TAG_server}}"
+            image: "{{.IMAGE_FULLY_QUALIFIED_server}}"
