fix namespace rendering for Cloud Deploy

--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -6,6 +6,9 @@ metadata:
   labels:
     {{- toYaml .Values.podLabels | nindent 4 }}
   {{- end }}
+  {{- if .Values.namespace }}  
+  namespace: {{ .Values.namespace }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   selector:
