--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: {{ .Chart.Name }}
   labels:
     app: {{ .Chart.Name }}
+  {{- if .Values.namespace }}  
+  namespace: {{ .Values.namespace }}
+  {{- end }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
