fix release name

--- a/ci/03-cloudbuild-skaffold-cloud-deploy.yaml
+++ b/ci/03-cloudbuild-skaffold-cloud-deploy.yaml
@@ -16,7 +16,7 @@ steps:
       - "deploy"
       - "releases"
       - "create"
-      - "$SHORT_SHA-$DATE-$TIME"
+      - "$SHORT_SHA"
       - "--delivery-pipeline=helm-skaffold-demo"
       - "--build-artifacts=/workspace/artifacts.json"
       - "--region=$LOCATION"
